--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
     <main>
       <section id="iam" class="section">
         <div class="title">
-          <h2>I AM <span class="underline">______</span> Developer</h2>
+          <h2>
+            <span>I AM</span> <span class="underline">_________</span>
+            <span>Developer</span>
+          </h2>
           <ol>
-            <li>지속 가능한 코드와 탄탄한 설계를 지향하는</li>
-            <li>새로운 배움을 두려워하지 않는</li>
-            <li>코드의 수준을 유지하며 마감을 엄수하려 노력하는</li>
+            <li>빠르게 익히고 손쉽게 적응하는</li>
+            <li>코드에 대한 의심과 배우려는 자세를 유지하는</li>
+            <li>맡은 업무를 반드시 책임지는</li>
           </ol>
         </div>
       </section>
@@ -61,12 +64,13 @@
                 <li>
                   웨이트 트레이닝에 관한 정보를 보기 쉽게 정리한 반응형 페이지.
                 </li>
-                <li>사용 언어: JavaScript, HTML/CSS</li>
+
                 <li>
-                  수많은 정보들 사이에서 신뢰성이 높고 효율적인 컨텐츠를 정리해
+                  수많은 정보 사이에서 많은 사람들이 신뢰하고, 효율적이고 정확한
+                  컨텐츠를 정리해
                   <br />
-                  운동에 관심있는 사람들이 실용적으로 활용할 수 있는 페이지를
-                  만들고 싶어 제작했습니다.
+                  운동을 좋아하는 분들이 실용적으로 활용할 수 있는 페이지를
+                  제공하고 싶어 제작했습니다.
                 </li>
                 <li>
                   <a
@@ -78,6 +82,7 @@
               </ul>
             </div>
           </li>
+
           <li id="second-project" class="project">
             <span class="project-thumbnail"
               ><img src="./images/vanilaprojects.png" alt="vanilaJs"
@@ -89,8 +94,10 @@
                 <li>
                   프론트 엔드 개발자는 다양한 라이브러리를 활용하는 것도
                   중요하지만 <br />
-                  가장 기본은 JavaScript라고 생각해 그 역량을 높이기 위해 진행한
-                  프로젝트입니다.
+                  모든 토대는 'JavaScript'라고 생각합니다. <br />
+                  따라서 그 역량을 높이기 위해 여러 난이도의 다양한 프로젝트를
+                  제작했고 <br />
+                  그를 정리한 페이지입니다.
                 </li>
                 <li>
                   <a
@@ -111,8 +118,12 @@
               <ul>
                 <li>CSS Grid-Box 속성에 대해 정리한 반응형 페이지</li>
                 <li>
-                  새로운 개념을 배울 때 시각화된 자료가 도움이 많이 된다고
-                  생각해 제작했습니다.
+                  'Grid Layout'은 반응형 페이지를 제작할 때 유용하게 쓰입니다.
+                  <br />
+                  그렇기에 해당 개념을 숙지하는 것이 많은 도움이 되는데,
+                  <br />
+                  새로운 지식을 배울 때 시각화된 자료가 학습에 효과적이기에 이
+                  페이지를 제작했습니다.
                 </li>
                 <li>
                   <a
@@ -134,6 +145,12 @@
                 <li>React를 이용한 실시간 날씨 정보 페이지</li>
                 <li>Open API 사용</li>
                 <li>
+                  처음으로 REACT를 이용해 프로젝트를 진행하는데 무엇을 주제로
+                  할까 고민하다 <br />
+                  매일 접하고 누구에게나 필요한 정보인 날씨를 활용해
+                  제작했습니다. <br />
+                  'openweathermap'에서 실시간으로 정보를 호출해
+                  <br />
                   우리나라 대표 도시들의 기온, 습도 등 정보를 한 눈에 볼 수 있게
                   정리한 페이지 입니다.
                 </li>
@@ -142,6 +159,36 @@
                     href="https://quasar529.github.io/simple_weather_app"
                     target="_blank"
                     >quasar529.github.io/simple_weather_app</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li id="fifth-project" class="project">
+            <span class="project-thumbnail"
+              ><img src="./images/tailored.png" alt="Tailored Nutrition"
+            /></span>
+            <div class="project-desc">
+              <h2>
+                5. Tailored Nutrition
+              </h2>
+              <ul>
+                <li>Open API를 이용한 요리 정보 제공 페이지</li>
+                <li>
+                  각자 본인에게 필요한 영양소를 원하는 만큼 섭취하기 위해선
+                  <br />많은 노력과 시간이 필요합니다. <br />
+                  이 페이지는 그 수고로움을 덜어주기 위해 제작했습니다 <br />
+                  영양소를 선택하고 수치를 입력하면 해당 조건에 맞는 요리를
+                  찾아줍니다. <br />현재는 단순한 정보만 표시하지만 레시피도
+                  추가하고 <br />
+                  선택할 수 있는 영양소의 종류를 추가할 예정입니다.
+                </li>
+
+                <li>
+                  <a
+                    href="https://quasar529.github.io/Tailored_Nutrition"
+                    target="_blank"
+                    >quasar529.github.io/Tailored_Nutrition</a
                   >
                 </li>
               </ul>
